--- a/index.html
+++ b/index.html
@@ -14,76 +14,55 @@
 	<link rel="stylesheet" type="text/css" href="media/css/style.css" />
 	<script src='media/js/jquery-1.8.1.min.js'></script>
 	<script src='media/js/fastclick.js'></script>
-	<script src='media/js/jquery.fullPage.min.js'></script>
-	<script src="media/js/jquery.easings.min.js"></script>
 	<script src='media/js/script.js'></script>
 </head>
 <body>
 	<div id="fullpage">
-		<section class="section bg-white">
-			<div class="container mobile-align-center">
-				<div class="grid grid-6-12 offset-bottom-1">
-					<div class="f-large align-right hi-im superscript animate-before js-animate-1">
-						Hi, I'm
+		<section class="section bg-white no-padding">
+			<div>
+				<div class="container mobile-align-center">
+					<div class="grid grid-6-12 offset-bottom-1">
+						<div class="f-large align-right hi-im superscript animate-before js-animate-1">
+							Hi, I'm
+						</div>
+						<h1 class="pull-right uppercase align-right padding-bottom animate-before js-animate-2">
+							Morgan<br>Carter
+						</h1>
 					</div>
-					<h1 class="pull-right uppercase align-right padding-bottom animate-before js-animate-2">
-						Morgan<br>Carter
-					</h1>
-				</div>
-				<div class="grid grid-6-12 offset-top-1">
-					<p class="f-large short-width animate-before js-animate-3">
-						I’m an interaction designer based in Sydney. I make beautiful websites.
-					</p>
-					<div class="animate-before js-animate-4">
-						<button>Explore</button>
+					<div class="grid grid-6-12 offset-top-1">
+						<p class="f-large short-width animate-before js-animate-3">
+							I’m an interaction designer based in Sydney. I make beautiful websites.
+						</p>
+						<div class="animate-before js-animate-4">
+							<button>Explore</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
 
-		<section class="section dark bg-blue">
-			<div class="text container">
-				<div class="grid grid-4-12 offset-top-2">
-					<div class="f-large align-right superscript tablet-hide">
-						A little about
+		<section class="section dark bg-blue no-padding">
+			<div>
+				<div class="text container">
+					<div class="grid grid-4-12 offset-top-2">
+						<div class="f-large align-right superscript tablet-hide">
+							A little about
+						</div>
+						<h1 class="pull-right uppercase align-right mobile-align-center padding-bottom">
+							About<br class="tablet-hide"> Me
+						</h1>
 					</div>
-					<h1 class="pull-right uppercase align-right mobile-align-center padding-bottom">
-						About<br class="tablet-hide"> Me
-					</h1>
-				</div>
-				<div class="grid grid-8-12 offset-bottom-2">
-					<img class="me mobile-align-center mobile-hide" src="media/images/me.jpg" width="260">
-					<div class="me-blurry"></div>
-					<p class="f-large">
-						I live in Sydney, Australia.
-						<br>
-						I'm currently working for <a href="http://www.deputy.com/" target="_blank">Deputy</a>.
-						<br>
-						I play drums in a band and I'm listening to <a href="http://open.spotify.com/track/6WVRhBxRMW9fn6sRkt2gWn" target="_blank">Interstellar</a> right now.
-					</p>
-				</div>
-			</div>
-		</section>
-
-
-		<section class="section dark bg-black">
-			<div class="container wide">
-				<div class="text grid grid-4-12">
-					<div class="f-small align-right superscript tablet-hide">
-						Web Design + Coding
-					</div>
-					<h1 class="pull-right uppercase align-right padding-bottom">
-						Deputy
-					</h1>
-					<p class="f-medium align-right">
-						Deputy is a web and mobile app that serves over 70,000 people worldwide. <span class="mobile-hide">I needed to bring the desktop app and website together to look like the same product - this was the first step in a big design overhaul.</span>
-					</p>
-					<a class="button pull-right" href="http://www.deputy.com" target="_blank">Visit Site <i class="icon-right"></i></a>
-				</div>
-				<div class="grid grid-8-12">
-					<div class="img-viewer">
-						<img src="media/images/work/deputy.jpg">
+					<div class="grid grid-8-12 offset-bottom-2">
+						<img class="me mobile-align-center mobile-hide" src="media/images/me.jpg" width="260">
+						<div class="me-blurry"></div>
+						<p class="f-large">
+							I live in Sydney, Australia.
+							<br>
+							I'm currently working for <a href="http://www.deputy.com/" target="_blank">Deputy</a>.
+							<br>
+							I play drums in a band and I'm listening to <a href="http://open.spotify.com/track/6WVRhBxRMW9fn6sRkt2gWn" target="_blank">Interstellar</a> right now.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -91,48 +70,24 @@
 
 
 		<section class="section dark bg-black">
-			<div class="container wide">
-				<div class="text grid grid-4-12">
-					<div class="f-small align-right superscript tablet-hide">
-						Web Design + Coding
+			<div>
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right padding-bottom">
+							Deputy
+						</h1>
+						<p class="f-medium align-right">
+							Deputy is a web and mobile app that serves over 70,000 people worldwide. <span class="mobile-hide">I needed to bring the desktop app and website together to look like the same product - this was the first step in a big design overhaul.</span>
+						</p>
+						<a class="button pull-right" href="http://www.deputy.com" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
-					<h1 class="pull-right uppercase align-right padding-bottom">
-						True Skate
-					</h1>
-					<p class="f-medium align-right">
-						True Skate is the #1 game on the app store in 70 countries.
-						<span class="mobile-hide">We used Stackla to create a microsite that would promote the brand's social media<span class="tablet-hide">,
-						engage users to post their own content, and drive sales</span>.</span>
-					</p>
-					<a class="button pull-right" href="http://social.trueskate.com" target="_blank">Visit Site <i class="icon-right"></i></a>
-				</div>
-				<div class="grid grid-8-12">
-					<div class="img-viewer">
-						<img src="media/images/work/trueskate.jpg">
-					</div>
-				</div>
-			</div>
-		</section>
-
-
-		<section class="section dark bg-black">
-			<div class="container wide">
-				<div class="text grid grid-4-12">
-					<div class="f-small align-right superscript tablet-hide">
-						Website Design, UX and Coding
-					</div>
-					<h2 class="pull-right uppercase align-right padding-bottom">
-						Stackla Admin Portal
-					</h2>
-					<p class="f-medium align-right" style="clear: right;">
-						The Stackla Admin Portal allows clients to aggregate and curate their content, and edit their displays.
-						<br>
-						The UX has been constantly improved with user testing, and is supported by a minimal design focusing on content and small bursts of colour.
-					</p>
-				</div>
-				<div class="grid grid-8-12">
-					<div class="img-viewer">
-						<img src="media/images/work/admin.jpg">
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/work/deputy.jpg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -140,45 +95,26 @@
 
 
 		<section class="section dark bg-black">
-			<div class="container wide">
-				<div class="text grid grid-4-12">
-					<div class="f-small align-right superscript tablet-hide">
-						Web Design + Coding
+			<div>
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right padding-bottom">
+							True Skate
+						</h1>
+						<p class="f-medium align-right">
+							True Skate is the #1 game on the app store in 70 countries.
+							<span class="mobile-hide">We used Stackla to create a microsite that would promote the brand's social media<span class="tablet-hide">,
+							engage users to post their own content, and drive sales</span>.</span>
+						</p>
+						<a class="button pull-right" href="http://social.trueskate.com" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
-					<h1 class="pull-right uppercase align-right padding-bottom">
-						Stackla
-					</h1>
-					<p class="f-medium align-right">
-						The website draws most of Stackla's leads by showcasing Stackla's five different solutions<span class="tablet-hide">, showing the most popular clients, and using a fun animation to quickly explain what the product does</span>.
-					</p>
-					<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
-				</div>
-				<div class="grid grid-8-12">
-					<div class="img-viewer">
-						<img src="media/images/work/stackla.jpg">
-					</div>
-				</div>
-			</div>
-		</section>
-
-
-		<section class="section dark bg-black">
-			<div class="container wide">
-				<div class="text grid grid-4-12">
-					<div class="f-small align-right superscript tablet-hide">
-						Coding
-					</div>
-					<h2 class="pull-right uppercase align-right padding-bottom">
-						Manchester United
-					</h2>
-					<p class="f-medium align-right">
-					 	The site allows fans to see all the content being produced by the club in one place across all their major accounts.<span class="tablet-hide"> It's a national site, serving multiple languages at once.</span>
-					</p>
-					<a class="button pull-right" href="http://social.manutd.com/" target="_blank">Visit Site <i class="icon-right"></i></a>
-				</div>
-				<div class="grid grid-8-12">
-					<div class="img-viewer">
-						<img src="media/images/work/manu.jpg">
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/work/trueskate.jpg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -186,22 +122,25 @@
 
 
 		<section class="section dark bg-black">
-			<div class="container wide">
-				<div class="text grid grid-4-12">
-					<div class="f-small align-right superscript tablet-hide">
-						Coding
+			<div>
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Website Design, UX and Coding
+						</div>
+						<h2 class="uppercase align-right padding-bottom">
+							Stackla Admin Portal
+						</h2>
+						<p class="f-medium align-right" style="clear: right;">
+							The Stackla Admin Portal allows clients to aggregate and curate their content, and edit their displays.
+							<br>
+							The UX has been constantly improved with user testing, and is supported by a minimal design focusing on content and small bursts of colour.
+						</p>
 					</div>
-					<h2 class="pull-right uppercase align-right padding-bottom">
-						Asia's Next Top Model
-					</h2>
-					<p class="f-medium align-right">
-						Built to support the TV show and promote social engagement after each week's program.<span class="tablet-hide"> A custom Wordpress theme built from scratch to suit the client's designs. Fully responsive, retina and all that jazz.</span>
-					</p>
-					<a class="button pull-right" href="http://asntm2.starworldasia.tv/" target="_blank">Visit Site <i class="icon-right"></i></a>
-				</div>
-				<div class="grid grid-8-12">
-					<div class="img-viewer">
-						<img src="media/images/work/asntm.jpg">
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/work/admin.jpg">
+						</div>
 					</div>
 				</div>
 			</div>
@@ -209,45 +148,123 @@
 
 
 		<section class="section dark bg-black">
-			<div class="container wide">
-				<div class="text grid grid-4-12">
-					<div class="f-small align-right superscript tablet-hide">
-						Coding
+			<div>
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Web Design + Coding
+						</div>
+						<h1 class="pull-right uppercase align-right padding-bottom">
+							Stackla
+						</h1>
+						<p class="f-medium align-right">
+							The website draws most of Stackla's leads by showcasing Stackla's five different solutions<span class="tablet-hide">, showing the most popular clients, and using a fun animation to quickly explain what the product does</span>.
+						</p>
+						<a class="button pull-right" href="http://stackla.com" target="_blank">Visit Site <i class="icon-right"></i></a>
 					</div>
-					<h2 class="pull-right uppercase align-right padding-bottom">
-						Myer
-					</h2>
-					<p class="f-medium align-right" style="clear: right;">
-						A number of widgets were built to support the livestream of the Myer Spring Summer 2015 Fashion Launch.
-					</p>
-					<a class="button pull-right" href="http://myer.com.au/livestream" target="_blank">Visit Site <i class="icon-right"></i></a>
-				</div>
-				<div class="grid grid-8-12">
-					<div class="img-viewer">
-						<img src="media/images/work/myer.jpg">
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/work/stackla.jpg">
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
 
-		<section class="section bg-wheat">
-			<div class="container mobile-align-center">
-				<div class="grid grid-6-12">
-					<h1 class="pull-right uppercase align-right">
-						Contact<br class="tablet-hide"> Me
-					</h1>
+		<section class="section dark bg-black">
+			<div>
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Coding
+						</div>
+						<h2 class="uppercase align-right padding-bottom">
+							Manchester United
+						</h2>
+						<p class="f-medium align-right">
+						 	The site allows fans to see all the content being produced by the club in one place across all their major accounts.<span class="tablet-hide"> It's a national site, serving multiple languages at once.</span>
+						</p>
+						<a class="button pull-right" href="http://social.manutd.com/" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/work/manu.jpg">
+						</div>
+					</div>
 				</div>
-				<div class="grid grid-6-12">
-					<p class="f-large">
-						Let's work together!
-						<br>
-						<a href="mailto:morgancarter1@gmail.com"><i class="icon-fw icon-mail"></i>morgancarter1@gmail.com</a>
-						<br>
-						<a><i class="icon-fw icon-phone"></i>0434 886 047</a>
-						<br>
-						<a href="MorganCarterResume.pdf" target="_blank"><i class="icon-fw icon-doc-text"></i>Résumé</a>
-					</p>
+			</div>
+		</section>
+
+
+		<section class="section dark bg-black">
+			<div>
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Coding
+						</div>
+						<h2 class="uppercase align-right padding-bottom">
+							Asia's Next Top Model
+						</h2>
+						<p class="f-medium align-right">
+							Built to support the TV show and promote social engagement after each week's program.<span class="tablet-hide"> A custom Wordpress theme built from scratch to suit the client's designs. Fully responsive, retina and all that jazz.</span>
+						</p>
+						<a class="button pull-right" href="http://asntm2.starworldasia.tv/" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/work/asntm.jpg">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+		<section class="section dark bg-black">
+			<div>
+				<div class="container wide">
+					<div class="text grid grid-4-12">
+						<div class="f-small align-right superscript tablet-hide">
+							Coding
+						</div>
+						<h2 class="uppercase align-right padding-bottom">
+							Myer
+						</h2>
+						<p class="f-medium align-right">A number of widgets were built to support the livestream of the Myer Spring Summer 2015 Fashion Launch.
+						</p>
+						<a class="button pull-right" href="http://myer.com.au/livestream" target="_blank">Visit Site <i class="icon-right"></i></a>
+					</div>
+					<div class="grid grid-8-12">
+						<div class="img-viewer">
+							<img src="media/images/work/myer.jpg">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
+		<section class="section bg-wheat no-padding">
+			<div>
+				<div class="container mobile-align-center">
+					<div class="grid grid-6-12">
+						<h1 class="pull-right uppercase align-right">
+							Contact<br class="tablet-hide"> Me
+						</h1>
+					</div>
+					<div class="grid grid-6-12">
+						<p class="f-large">
+							Let's work together!
+							<br>
+							<a href="mailto:morgancarter1@gmail.com"><i class="icon-fw icon-mail"></i>morgancarter1@gmail.com</a>
+							<br>
+							<a><i class="icon-fw icon-phone"></i>0434 886 047</a>
+							<br>
+							<a href="MorganCarterResume.pdf" target="_blank"><i class="icon-fw icon-doc-text"></i>Résumé</a>
+						</p>
+					</div>
 				</div>
 			</div>
 		</section>
